changes to beatBox.js

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="https://unpkg.com/tone@14.7.58/build/Tone.js"></script>
         <script src="sketch.js"></script> 
         <script src="musicBox.js"></script> 
+        <script src="beatBox.js"></script> 
         <!-- <script src="makeBeat.js"></script> -->
     </head>
     <body>
